welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    var couleur:Boolean = Color.green
                                ^SlugTracking:5: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
couleur = getCouleurSol()
                       ^