welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var couleur:Boolean = Color.green
avance()
couleur = getCouleurSol()
	if(couleur  == Color.green)
{
	avance()
	}
	return couleur
}        
